lib/src/bindings.dart

// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// edflib: cross-platform library for reading and writing edf files
class EdfLib {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  EdfLib(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  EdfLib.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Opens an existing file for reading.
  ///
  /// @param[in] path
  /// null-terminated string containing the \p path to the file
  ///
  /// @param[out] edfhdr
  /// pointer to an \p edflib_hdr_t struct, all fields in this struct will be overwritten,
  /// it will be filled with all the relevant header- and signalinfo/parameters
  ///
  /// @param[in] read_annotations
  /// Must have one of the following values:
  /// - EDFLIB_DO_NOT_READ_ANNOTATIONS      annotations will not be read (this can save time when opening a very large EDF+ or BDF+ file
  /// - EDFLIB_READ_ANNOTATIONS             annotations will be read immediately, stops when an annotation has
  /// been found which contains the description "Recording ends"
  /// - EDFLIB_READ_ALL_ANNOTATIONS         all annotations will be read immediately
  ///
  /// @return
  /// 0 on success, in case of an error it returns -1 and an error code will be set in the member "filetype" of edfhdr.
  /// This function is required if you want to read a file
  ///
  /// In case of a file format error (-3), try to open the file with EDFbrowser: https://www.teuniz.net/edfbrowser/
  /// It will give you full details about the cause of the error and it can also fix most errors.
  int open_file_readonly(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<edflib_hdr_t> edfhdr,
    int read_annotations,
  ) {
    return _open_file_readonly(
      path,
      edfhdr,
      read_annotations,
    );
  }

  late final _open_file_readonlyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<edflib_hdr_t>,
              ffi.Int)>>('edfopen_file_readonly');
  late final _open_file_readonly = _open_file_readonlyPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<edflib_hdr_t>, int)>();

  /// Reads \p n samples from \p edfsignal, starting from the current sample position indicator, into \p buf (edfsignal starts at 0).
  /// The values are converted to their physical values e.g. microVolts, beats per minute, etc.
  ///
  /// @param[in] handle
  /// File handle.
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  /// @param[in] n
  /// Number of samples to read. The sample position indicator will be increased with the same amount.
  /// @param[out] buf
  /// Pointer to a buffer, size must be equal to, or bigger than, sizeof(double[n])
  ///
  /// @return
  /// The number of samples read (this can be less than \p n or zero!) or -1 in case of an error
  int read_physical_samples(
    int handle,
    int edfsignal,
    int n,
    ffi.Pointer<ffi.Double> buf,
  ) {
    return _read_physical_samples(
      handle,
      edfsignal,
      n,
      buf,
    );
  }

  late final _read_physical_samplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Double>)>>('edfread_physical_samples');
  late final _read_physical_samples = _read_physical_samplesPtr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Double>)>();

  /// Reads \p n samples from \p edfsignal, starting from the current sample position indicator, into \p buf (edfsignal starts at 0).
  /// The values are the "raw" digital values (e.g. from an ADC).
  ///
  /// @param[in] handle
  /// File handle.
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  /// @param[in] n
  /// Number of samples to read. The sample position indicator will be increased with the same amount.
  /// @param[out] buf
  /// Pointer to a buffer, size must be equal to, or bigger than, sizeof(double[n])
  ///
  /// @return
  /// The number of samples read (this can be less than \p n or zero!) or -1 in case of an error
  int read_digital_samples(
    int handle,
    int edfsignal,
    int n,
    ffi.Pointer<ffi.Int> buf,
  ) {
    return _read_digital_samples(
      handle,
      edfsignal,
      n,
      buf,
    );
  }

  late final _read_digital_samplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Int>)>>('edfread_digital_samples');
  late final _read_digital_samples = _read_digital_samplesPtr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Int>)>();

  /// Sets the sample position indicator for the edfsignal pointed to by \p edfsignal.
  /// The new position, measured in samples, is obtained by adding offset samples to the position specified by \p whence.
  /// If \p whence is set to EDFSEEK_SET, EDFSEEK_CUR, or EDFSEEK_END, the offset is relative to the start of the file,
  /// the current position indicator, or end-of-file, respectively.
  /// Note that every signal has it's own independent sample position indicator and \p edfseek() affects only one of them.
  ///
  /// @param[in] handle
  /// File handle.
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  /// @param[in] offset
  /// Offset measured in samples.
  /// @param[in] whence
  /// Reference for \p offset:
  /// - EDFSEEK_SET start of the file
  /// - EDFSEEK_CUR current position
  /// - EDFSEEK_END end of the file
  ///
  /// @return
  /// The current offset or -1 in case of an error.
  int seek(
    int handle,
    int edfsignal,
    int offset,
    int whence,
  ) {
    return _seek(
      handle,
      edfsignal,
      offset,
      whence,
    );
  }

  late final _seekPtr = _lookup<
      ffi.NativeFunction<
          ffi.LongLong Function(
              ffi.Int, ffi.Int, ffi.LongLong, ffi.Int)>>('edfseek');
  late final _seek = _seekPtr.asFunction<int Function(int, int, int, int)>();

  /// Obtains the current value of the sample position indicator for the edfsignal pointed to by \p edfsignal.
  /// Note that every signal has it's own independent sample position indicator and \p edftell() affects only one of them.
  ///
  /// @param[in] handle
  /// File handle.
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @return
  /// The current offset or -1 in case of an error.
  int tell(
    int handle,
    int edfsignal,
  ) {
    return _tell(
      handle,
      edfsignal,
    );
  }

  late final _tellPtr =
      _lookup<ffi.NativeFunction<ffi.LongLong Function(ffi.Int, ffi.Int)>>(
          'edftell');
  late final _tell = _tellPtr.asFunction<int Function(int, int)>();

  /// Sets the sample position indicator for the edfsignal pointed to by \p edfsignal to the beginning of the file.
  /// It is equivalent to: \p edfseek(handle, edfsignal, 0LL, EDFSEEK_SET).
  /// Note that every signal has it's own independent sample position indicator and \p edfrewind() affects only one of them.
  ///
  /// @param[in] handle
  /// File handle.
  /// @param[in] edfsignal
  /// The zero-based index of the signal.
  ///
  /// @return
  /// 0 on success or -1 in case of an error.
  int rewind(
    int handle,
    int edfsignal,
  ) {
    return _rewind(
      handle,
      edfsignal,
    );
  }

  late final _rewindPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edfrewind');
  late final _rewind = _rewindPtr.asFunction<int Function(int, int)>();

  /// Fills the edflib_annotation_t structure with the annotation \p n.
  /// The string that describes the annotation/event is encoded in UTF-8.
  /// To obtain the number of annotations in a file, check edf_hdr_struct -> annotations_in_file.
  ///
  /// @param[in] handle
  /// File handle.
  /// @param[in] n
  /// The zero-based index number of the list of annotations.
  /// @param[out] annot
  /// Pointer to a struct that will be filled with the annotation.
  ///
  /// @return
  /// 0 on success or -1 in case of an error.
  int get_annotation(
    int handle,
    int n,
    ffi.Pointer<edflib_annotation_t> annot,
  ) {
    return _get_annotation(
      handle,
      n,
      annot,
    );
  }

  late final _get_annotationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.Int,
              ffi.Pointer<edflib_annotation_t>)>>('edf_get_annotation');
  late final _get_annotation = _get_annotationPtr
      .asFunction<int Function(int, int, ffi.Pointer<edflib_annotation_t>)>();

  /// Closes (and in case of writing, finalizes) the file.
  ///
  /// This function MUST be called when you have finished reading or writing
  /// This function is required after reading or writing. Failing to do so will cause
  /// unnecessary memory usage and in case of writing it will cause a corrupted or incomplete file.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @return
  /// 0 on success or -1 in case of an error.
  int close_file(
    int handle,
  ) {
    return _close_file(
      handle,
    );
  }

  late final _close_filePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('edfclose_file');
  late final _close_file = _close_filePtr.asFunction<int Function(int)>();

  /// Returns the version number of this library, multiplied by hundred. if version is "1.00" then it will return 100.
  ///
  /// @return
  /// The version number.
  int version() {
    return _version();
  }

  late final _versionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('edflib_version');
  late final _version = _versionPtr.asFunction<int Function()>();

  /// Returns 1 if the file is in use, either for reading or writing, otherwise returns 0.
  ///
  /// @param[in] path
  /// Pointer to a null-terminated string that contains the path to the file.
  ///
  /// @return
  /// 1 if the file is in use (either for reading or writing), otherwise 0.
  int is_file_used(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _is_file_used(
      path,
    );
  }

  late final _is_file_usedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'edflib_is_file_used');
  late final _is_file_used =
      _is_file_usedPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Returns the number of open files.
  ///
  /// @return
  /// The number of open files, either for reading or writing.
  int get_number_of_open_files() {
    return _get_number_of_open_files();
  }

  late final _get_number_of_open_filesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'edflib_get_number_of_open_files');
  late final _get_number_of_open_files =
      _get_number_of_open_filesPtr.asFunction<int Function()>();

  /// Returns the handle of an open file, either for reading or writing.
  ///
  /// @param[in] file_number
  /// A zero based index number of the list of open files.
  ///
  /// @return
  /// The file handle or -1 if the file_number >= number of open files.
  int get_handle(
    int file_number,
  ) {
    return _get_handle(
      file_number,
    );
  }

  late final _get_handlePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'edflib_get_handle');
  late final _get_handle = _get_handlePtr.asFunction<int Function(int)>();
